bpo-33645: Fix an "unknown parsing error" in the parser.

It is reproduced when parse the "<>" operator and run
Python with both options -3 and -We.